# quick_scripts

./: .gitignore  README.md
PurdueResearch/: CommLogging.py  covariance.py  kalman2.py  test_script.py
Purdue_Research/: GPStoCartesian.py  PoseWithKalman.py  SerialTest.py
Recreation/game_sales_scrapper/: .env.example  .gitignore  Cargo.toml  README.md  send_email.ps1  send_email.sh  set_cron.sh  set_task_scheduler.ps1
Recreation/limited_color_img_format/: CMakeLists.txt  README.md
Recreation/steam_sales_scrapper/: .gitignore  Cargo.toml  README.md  run_scrapper.sh  send_email.ps1  send_email.sh  set_cron.sh
Recreation/steam_sales_scrapper/src/: lib.rs  mailer.rs  main.rs
Recreation/steam_sales_scrapper/src/data/: json.rs  settings.rs  thresholds.rs
Recreation/steam_sales_scrapper/src/store_api/: gog.rs  steam.rs
Utility/: README.md  code_lines.sh
Utility/ping_checker/: ping_checker.py  ping_list.txt
apgb_converter/: .gitignore  CMakeLists.txt  README.md  converter.cpp  fileimporter.cpp  imageimporter.cpp  main.cpp  mainwindow.cpp  save.cpp  test.csv
apgb_converter/apgbApp/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  palettes.h  save.h
apgb_converter/img/: test.txt  test_matrix.lct  test_matrix.txt
apgb_converter/import_dialog/: importdialog.cpp
apgb_converter/include/: fileimporter.h  imageimporter.h  mainwindow.h  palettes.h
apgb_converter/ui/: errormessagedialog.ui  importdialog.ui  (+1 more)
recreation/limited_color_img/: .gitignore  CMakeLists.txt  README.md
recreation/limited_color_img/src/: encoder.cpp
(+20 files in other folders)
