[package]
name = "steam_sales_scrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] } 
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
